// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with collapse prop 1`] = `
<button
  className="sc-bwzfXH cqQrNb"
/>
`;

exports[`renders correctly with disabled prop 1`] = `
<button
  className="sc-bwzfXH fxhIar"
  disabled={true}
/>
`;

exports[`renders correctly with expand prop 1`] = `
<button
  className="sc-bwzfXH jCSSmV"
/>
`;

exports[`renders correctly with hidden prop 1`] = `
<button
  className="sc-bwzfXH dDWPnY"
  hidden={true}
/>
`;

exports[`renders correctly with no props 1`] = `
<button
  className="sc-bwzfXH fRwFix"
/>
`;

exports[`renders correctly with secondary prop 1`] = `
<button
  className="sc-bwzfXH hrizdo"
/>
`;

exports[`renders correctly with small prop 1`] = `
<button
  className="sc-bwzfXH vFvYX"
/>
`;
